добавляет разметку формы

--- a/catalog.html
+++ b/catalog.html
@@ -4,31 +4,31 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Каталог продукции</title>
 </head>
 <body>
   <header class="main-header">
-  <a href="#" class="main-header__logo">
-    <img src="vectors/logo-mobile.svg" alt="логитип кот энгерджи" width="33" height="38">
-  </a>
-  <a href="#" class="main-header__logo_text">cat energy</a>
-  <nav class="main-nav">
-    <button class="main_nav__toggle" type="button"><span class="vissualy-hidden">Открыть меню</span></button>
-    <div class="main-nav__wrapper">
-      <ul class="main-nav__list site-list">
-        <li class="site-list__item site-list__item">
-          <a href="#">главная</a>
-        </li>
-        <li class="site-list__item site-list__item--active">
-          <a href="#">каталог продукции</a>
-        </li>
-        <li class="site-list__item site-list__item">
-          <a href="#">подбор программы</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-</header>
+    <a href="#" class="main-header__logo">
+      <img src="vectors/logo-mobile.svg" alt="логитип кот энгерджи" width="33" height="38">
+    </a>
+    <a href="#" class="main-header__logo_text">cat energy</a>
+    <nav class="main-nav">
+      <button class="main_nav__toggle" type="button"><span class="vissualy-hidden">Открыть меню</span></button>
+      <div class="main-nav__wrapper">
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item site-list__item">
+            <a href="#">главная</a>
+          </li>
+          <li class="site-list__item site-list__item--active">
+            <a href="#">каталог продукции</a>
+          </li>
+          <li class="site-list__item site-list__item">
+            <a href="#">подбор программы</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
 <section class="catatalog">
 <h1 class="catalog">Каталог продукции</h1>
 <div>
