Исправляет ошибки в разметке

--- a/catalog.html
+++ b/catalog.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Каталог продукции</title>
 </head>
-<body>
+
+<body class="page">
   <header class="main-header">
     <a href="#" class="main-header__logo">
       <img src="vectors/logo-mobile.svg" alt="логитип кот энгерджи" width="33" height="38">
@@ -29,135 +31,135 @@
       </div>
     </nav>
   </header>
-<section class="catatalog">
-<h1 class="catalog">Каталог продукции</h1>
-<div>
-  <span class="stats_name">cat energy <br>pro 500 г</span>
-  <dl class="stats_list">
-    <dt class="stats__description">Масса</dt>
-    <dd class="stats__number">500 г</dd>
-    <dt class="stats__description">Вкус</dt>
-    <dd class="stats__number">Курица</dd>
-    <dt class="stats__description">Цена</dt>
-    <dd class="stats__number">500 &#8381</dd>
-  </dl>
-  <button class="stats_button" type="button">заказать</button>
-</div>
-<div>
-  <h3 class="stats_name">cat energy <br>pro 1000 г</h3>
-  <dl class="stats_list">
-    <dt class="stats__description">Масса</dt>
-    <dd class="stats__number">500 г</dd>
-    <dt class="stats__description">Вкус</dt>
-    <dd class="stats__number">Курица</dd>
-    <dt class="stats__description">Цена</dt>
-    <dd class="stats__number">1000 &#8381</dd>
-  </dl>
-  <button class="stats_button" type="button">заказать</button>
-</div>
-<div>
-  <span class="stats_name">cat energy <br>pro 500 г</span>
-  <h3 class="stats_list">
-    <dt class="stats__description">Масса</dt>
-    <dd class="stats__number">500 г</dd>
-    <dt class="stats__description">Вкус</dt>
-    <dd class="stats__number">Рыба</dd>
-    <dt class="stats__description">Цена</dt>
-    <dd class="stats__number">700 &#8381</dd>
-  </h3>
-  <button class="stats_button" type="button">заказать</button>
-</div>
-<div>
-  <h3 class="stats_name">cat energy <br>pro 1000 г</h3>
-  <dl class="stats_list">
-    <dt class="stats__description">Масса</dt>
-    <dd class="stats__number">500 г</dd>
-    <dt class="stats__description">Вкус</dt>
-    <dd class="stats__number">Рыба</dd>
-    <dt class="stats__description">Цена</dt>
-    <dd class="stats__number">1000 &#8381</dd>
-  </dl>
-  <button class="stats_button" type="button">заказать</button>
-</div>
-<div>
-  <h3 class="stats_name">cat energy <br>slim 500 г</h3>
-  <dl class="stats_list">
-    <dt class="stats__description">Масса</dt>
-    <dd class="stats__number">500 г</dd>
-    <dt class="stats__description">Вкус</dt>
-    <dd class="stats__number">Гречка</dd>
-    <dt class="stats__description">Цена</dt>
-    <dd class="stats__number">400 &#8381</dd>
-  </dl>
-  <button class="stats_button" type="button">заказать</button>
-</div>
-<div>
-  <h3 class="stats_name">cat energy <br>slim 1000 г</h3>
-  <dl class="stats_list">
-    <dt class="stats__description">Масса</dt>
-    <dd class="stats__number">1000 г</dd>
-    <dt class="stats__description">Вкус</dt>
-    <dd class="stats__number">Гречка</dd>
-    <dt class="stats__description">Цена</dt>
-    <dd class="stats__number">700 &#8381</dd>
-  </dl>
-  <button class="stats_button" type="button">заказать</button>
-</div>
-<div>
-  <h3 class="stats_name">cat energy <br>slim 500 г</h3>
-  <dl class="stats_list">
-    <dt class="stats__description">Масса</dt>
-    <dd class="stats__number">500г</dd>
-    <dt class="stats__description">Вкус</dt>
-    <dd class="stats__number">Рис</dd>
-    <dt class="stats__description">Цена</dt>
-    <dd class="stats__number">500 &#8381</dd>
-  </dl>
-  <button class="stats_button" type="button">заказать</button>
-</div>
-<div>
-  <h3 class="stats_more">показать еще 100500 товаров</h3>
-  <span class="stats_more__description">На самом деле вкусов гораздо больше!</span>
-  <button class="stats_button__more" type="button">показать все</button>
-</div>
-</section>
-<section class="addition">
-  <div class="addiction__list__addiction">
-    <h3 class="addiction__list">сахарозаменитель</h3>
-    <dl class="stats_list__addiction">
-      <dt class="ststs_list__addiction">1 упаковка (100 г)</dt>
-      <dd class="ststs_list__number">200 &#8381</dd>
-      <button class="button_addition" type="button">заказать</button>
-    </dl>
-  </div>
-  <div class="addiction__list__addiction">
-    <h3 class="addiction__list">питьевая вода</h3>
-    <dl class="stats_list__addiction">
-      <dt class="ststs_list__addiction">5 литров</dt>
-      <dd class="ststs_list__number">50 &#8381</dd>
-      <button class="button_addition" type="button">заказать</button>
-    </dl>
-  </div>
-  <div class="addiction__list__addiction">
-    <h3 class="addiction__list">молоко</h3>
-    <dl class="stats_list__addiction">
-      <dt class="ststs_list__addiction">1 литр</dt>
-      <dd class="ststs_list__number">50 &#8381</dd>
-      <button class="button_addition" type="button">заказать</button>
-    </dl>
-  </div>
-  <div class="addiction__list__addiction">
-    <h3 class="addiction__list">витамины</h3>
-    <dl class="stats_list__addiction">
-      <dt class="ststs_list__addiction">1 упаковка (30 г)</dt>
-      <dd class="ststs_list__number">300 &#8381</dd>
-      <button class="button_addition" type="button">заказать</button>
-    </dl>
-  </div>
-  <div class="addiction__gift_img">
-    <span class="addiction__gift_description">Закажите все <br> и получите чехол дл <br> кота в подарок!</span>
-  </div>
-</section>
+  <section class="catatalog">
+    <h1 class="catalog">Каталог продукции</h1>
+    <div>
+      <span class="stats_name">cat energy <br>pro 500 г</span>
+      <dl class="stats_list">
+        <dt class="stats__description">Масса</dt>
+        <dd class="stats__number">500 г</dd>
+        <dt class="stats__description">Вкус</dt>
+        <dd class="stats__number">Курица</dd>
+        <dt class="stats__description">Цена</dt>
+        <dd class="stats__number">500 &#8381</dd>
+      </dl>
+      <button class="stats_button" type="button">заказать</button>
+    </div>
+    <div>
+      <h3 class="stats_name">cat energy <br>pro 1000 г</h3>
+      <dl class="stats_list">
+        <dt class="stats__description">Масса</dt>
+        <dd class="stats__number">500 г</dd>
+        <dt class="stats__description">Вкус</dt>
+        <dd class="stats__number">Курица</dd>
+        <dt class="stats__description">Цена</dt>
+        <dd class="stats__number">1000 &#8381</dd>
+      </dl>
+      <button class="stats_button" type="button">заказать</button>
+    </div>
+    <div>
+      <span class="stats_name">cat energy <br>pro 500 г</span>
+      <h3 class="stats_list">
+        <dt class="stats__description">Масса</dt>
+        <dd class="stats__number">500 г</dd>
+        <dt class="stats__description">Вкус</dt>
+        <dd class="stats__number">Рыба</dd>
+        <dt class="stats__description">Цена</dt>
+        <dd class="stats__number">700 &#8381</dd>
+      </h3>
+      <button class="stats_button" type="button">заказать</button>
+    </div>
+    <div>
+      <h3 class="stats_name">cat energy <br>pro 1000 г</h3>
+      <dl class="stats_list">
+        <dt class="stats__description">Масса</dt>
+        <dd class="stats__number">500 г</dd>
+        <dt class="stats__description">Вкус</dt>
+        <dd class="stats__number">Рыба</dd>
+        <dt class="stats__description">Цена</dt>
+        <dd class="stats__number">1000 &#8381</dd>
+      </dl>
+      <button class="stats_button" type="button">заказать</button>
+    </div>
+    <div>
+      <h3 class="stats_name">cat energy <br>slim 500 г</h3>
+      <dl class="stats_list">
+        <dt class="stats__description">Масса</dt>
+        <dd class="stats__number">500 г</dd>
+        <dt class="stats__description">Вкус</dt>
+        <dd class="stats__number">Гречка</dd>
+        <dt class="stats__description">Цена</dt>
+        <dd class="stats__number">400 &#8381</dd>
+      </dl>
+      <button class="stats_button" type="button">заказать</button>
+    </div>
+    <div>
+      <h3 class="stats_name">cat energy <br>slim 1000 г</h3>
+      <dl class="stats_list">
+        <dt class="stats__description">Масса</dt>
+        <dd class="stats__number">1000 г</dd>
+        <dt class="stats__description">Вкус</dt>
+        <dd class="stats__number">Гречка</dd>
+        <dt class="stats__description">Цена</dt>
+        <dd class="stats__number">700 &#8381</dd>
+      </dl>
+      <button class="stats_button" type="button">заказать</button>
+    </div>
+    <div>
+      <h3 class="stats_name">cat energy <br>slim 500 г</h3>
+      <dl class="stats_list">
+        <dt class="stats__description">Масса</dt>
+        <dd class="stats__number">500г</dd>
+        <dt class="stats__description">Вкус</dt>
+        <dd class="stats__number">Рис</dd>
+        <dt class="stats__description">Цена</dt>
+        <dd class="stats__number">500 &#8381</dd>
+      </dl>
+      <button class="stats_button" type="button">заказать</button>
+    </div>
+    <div>
+      <h3 class="stats_more">показать еще 100500 товаров</h3>
+      <span class="stats_more__description">На самом деле вкусов гораздо больше!</span>
+      <button class="stats_button__more" type="button">показать все</button>
+    </div>
+  </section>
+  <section class="addition">
+    <div class="addiction__list__addiction">
+      <h3 class="addiction__list">сахарозаменитель</h3>
+      <dl class="stats_list__addiction">
+        <dt class="ststs_list__addiction">1 упаковка (100 г)</dt>
+        <dd class="ststs_list__number">200 &#8381</dd>
+        <button class="button_addition" type="button">заказать</button>
+      </dl>
+    </div>
+    <div class="addiction__list__addiction">
+      <h3 class="addiction__list">питьевая вода</h3>
+      <dl class="stats_list__addiction">
+        <dt class="ststs_list__addiction">5 литров</dt>
+        <dd class="ststs_list__number">50 &#8381</dd>
+        <button class="button_addition" type="button">заказать</button>
+      </dl>
+    </div>
+    <div class="addiction__list__addiction">
+      <h3 class="addiction__list">молоко</h3>
+      <dl class="stats_list__addiction">
+        <dt class="ststs_list__addiction">1 литр</dt>
+        <dd class="ststs_list__number">50 &#8381</dd>
+        <button class="button_addition" type="button">заказать</button>
+      </dl>
+    </div>
+    <div class="addiction__list__addiction">
+      <h3 class="addiction__list">витамины</h3>
+      <dl class="stats_list__addiction">
+        <dt class="ststs_list__addiction">1 упаковка (30 г)</dt>
+        <dd class="ststs_list__number">300 &#8381</dd>
+        <button class="button_addition" type="button">заказать</button>
+      </dl>
+    </div>
+    <div class="addiction__gift_img">
+      <span class="addiction__gift_description">Закажите все <br> и получите чехол дл <br> кота в подарок!</span>
+    </div>
+  </section>
 </body>
 <footer>
   <div class="cooperation">
@@ -165,7 +167,8 @@
     <address class="cooperation__adres">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
   </div>
   <div class="map">
-    <img src="images/Rectangle.jpg" alt="место нахождение торговой точки" class="map-rectangle" width="320" height="362">
+    <img src="images/Rectangle.jpg" alt="место нахождение торговой точки" class="map-rectangle" width="320"
+      height="362">
   </div>
   <span class="footer_logo">cat energy</span>
   <div class="social">
@@ -173,11 +176,12 @@
       <li class="social_list vissualy-hidden">вконтакте</li>
       <li class="social_list vissualy-hidden">ютуб</li>
       <li class="social_list vissualy-hidden">телеграм</li>
-      </ul>
-      <div class="HTML-Academy-link">
-        <a class="HTML-Academy-link_item_1 vissualy-hidden">HTML Academy</a>
-        <a class="HTML-Academy-link_icon vissualy-hidden">логотип HTML Academy</a>
-      </div>
+    </ul>
+    <div class="HTML-Academy-link">
+      <a class="HTML-Academy-link_item_1 vissualy-hidden">HTML Academy</a>
+      <a class="HTML-Academy-link_icon vissualy-hidden">логотип HTML Academy</a>
+    </div>
   </div>
 </footer>
+
 </html>
