--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cat energy</title>
 </head>
+
 <body class="page">
   <header class="main-header">
     <a href="#" class="main-header__logo">
@@ -17,13 +19,13 @@
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item site-list__item--active">
-            <a href="#">главная</a>
+            <a href="/">главная</a>
           </li>
           <li class="site-list__item site-list__item">
-            <a href="#">каталог продукции</a>
+            <a href="/catalog.html">каталог продукции</a>
           </li>
           <li class="site-list__item site-list__item">
-            <a href="#">подбор программы</a>
+            <a href="/form.html">подбор программы</a>
           </li>
         </ul>
       </div>
@@ -31,45 +33,65 @@
   </header>
   <main class="main-container">
     <section class="main-photo">
-    <h1 class="main-text">функциональное питание для котов</h1>
-    <h2 class="main-discription">занялся собой? займись котом!</h2>
-    <img src="images/index-can-mobile 1.jpg" alt="изображение банки кота энерджи" width="280" height="270">
+      <h1 class="main--text">функциональное питание для котов</h1>
+      <h2 class="main--discription">занялся собой? займись котом!</h2>
+      <img src="images/index-can-mobile 1.jpg" alt="изображение банки кота энерджи" width="280" height="270">
       <div class="main-button">
         <a href="#" class="main-button__catalog">Подобрать программу</a>
       </div>
     </section>
     <section class="products">
-      <h2 class="weight vissualy-hidden">похудение</h2>
-      <h3 class="products_item">похудение</h3>
-      <span class="products_description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</span>
-      <a href="№" class="products_link">Каталог slim</a>
-      <a href="№" class="products_arrow vissualy-hidden">перейти</a>
-      <h3 class="products_item">набор массы</h3>
-      <span class="products_description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</span>
-      <a href="№" class="products_link products_arrow">Каталог pro</a>
+      <!--ul>li*2-->
+      <ul class="products__list">
+        <li class="weight--lost"> похудение
+          <p class="products_description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
+            Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+          <a href="№" class="products__link">Каталог slim</a>
+        </li>
+        <li class="weight--up">
+          <span class="icon"> </span> набор массы
+          <p class="products__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
+            поможет вашему коту нарастить необходимые мышцы!</p>
+          <a href="№" class="products__link products__arrow">Каталог pro</a>
+        </li>
+      </ul>
     </section>
     <section class="advantages">
-      <h2 class="advanatages_item">как это работает</h2>
-      <ul class="advantages_item">
-        <li class="advantages_list">Функциональное питание содержит только поезные питательные вещи</li>
-        <li class="advantages_list">Выпускается в виде порошка,который нужно лишь залить кипятком и готово.</li>
-        <li class="advantages_list">Замените один-два приема обычной еды на наше функциональное питание.</li>
-        <li class="advantages_list">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+      <h2 class="advanatages__item">как это работает</h2>
+      <ul class="advantages__item">
+        <li class="advantages__list">
+          <p>Функциональное питание содержит только поезные питательные вещества.</p>
+        </li>
+        <li class="advantages__list">
+          <p>Выпускается в виде порошка,который нужно лишь залить кипятком и готово.</p>
+        </li>
+        <li class="advantages__list">
+          <p>Замените один-два приема обычной еды на наше функциональное питание.</p>
+        </li>
+        <li class="advantages__list">
+          <p>Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+        </li>
       </ul>
     </section>
     <section class="example">
-      <h2 class="example">Живой пример</h2>
-      <span class="example_description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </span>
-      <div class="example_result">
-        <span class="example_result_weight">5 кг</span>
-        <span class="example_rules_weight_frame">снижение веса</span>
-        <span class="example_result_time">60 дней</span>
-        <span class="example_rules_weight_time">затрачено времени</span>
+      <h2 class="example__title">Живой пример</h2>
+      <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy
+        Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16
+        часов в день. </p>
+      <div class="example__result">
+        <div class="example__result-block">
+          <span class="example__result-numbers">5 кг</span>
+          <span class="example__result-text">снижение веса</span>
+        </div>
+        <div class="example__result-block">
+          <span class="example__result-numbers">60 дней</span>
+          <span class="example__result-text">затрачено времени</span>
+        </div>
       </div>
       <p class="cost">Затраты на питание: 15 000 руб.</p>
       <div class="result__slider">
         <img src="images/cat.jpg" alt="слайдер кота до" class="cat_before" width="140" height="256">
-        <img src="images/slide after.jpg" alt="слайд кота после" class="cat_after" width="140" height="256">
+        <img src="images/slide after.jpg" alt="слайд кота после" class="cat__after" width="140" height="256">
       </div>
     </section>
   </main>
@@ -79,20 +101,22 @@
       <address class="cooperation__adres">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
     </div>
     <div class="map">
-      <img src="images/Rectangle.jpg" alt="место нахождение торговой точки" class="map-rectangle" width="320" height="362">
+      <img src="images/Rectangle.jpg" alt="место нахождение торговой точки" class="map-rectangle" width="320"
+        height="362">
     </div>
     <span class="footer_logo">cat energy</span>
     <div class="social">
       <ul class="social_link">
-        <li class="social_list vissualy-hidden">вконтакте</li>
-        <li class="social_list vissualy-hidden">ютуб</li>
-        <li class="social_list vissualy-hidden">телеграм</li>
-        </ul>
-        <div class="HTML-Academy-link">
-          <a class="HTML-Academy-link_item_1 vissualy-hidden">HTML Academy</a>
-          <a class="HTML-Academy-link_icon vissualy-hidden">логотип HTML Academy</a>
-        </div>
+        <li class="social__list vissualy-hidden">вконтакте</li>
+        <li class="social__list vissualy-hidden">ютуб</li>
+        <li class="social__list vissualy-hidden">телеграм</li>
+      </ul>
+      <div class="html-academy__link">
+        <a class="html-academy__link-item_1 vissualy-hidden">HTML Academy</a>
+        <a class="html-academy__link-icon vissualy-hidden">логотип HTML Academy</a>
+      </div>
     </div>
   </footer>
 </body>
+
 </html>
