--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,7 +10,7 @@
 
 <body class="page">
   <header class="main-header">
-    <a href="#" class="main-header__logo">
+    <a href="#" class="main-header__logo vissualy-hidden">
       <img src="vectors/logo-mobile.svg" alt="логитип кот энгерджи" width="33" height="38">
     </a>
     <a href="#" class="main-header__logo_text">cat energy</a>
@@ -19,13 +19,13 @@
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item site-list__item">
-            <a href="#">главная</a>
+            <a href="./index.html">главная</a>
           </li>
           <li class="site-list__item site-list__item--active">
             <a href="#">каталог продукции</a>
           </li>
           <li class="site-list__item site-list__item">
-            <a href="#">подбор программы</a>
+            <a href="./form.html">подбор программы</a>
           </li>
         </ul>
       </div>
