--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,144 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Кэт энерджи</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS. Адаптивная вёрстка и автоматизация</a>».</p>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./fonts/oswald/oswaldmedium.woff">
+  <link rel="stylesheet" href="./fonts/oswald/oswaldmedium.woff2">
+  <link rel="stylesheet" href="./fonts/oswald/oswaldregular.woff">
+  <link rel="stylesheet" href="./fonts/oswald/oswaldregular.woff2">
+  <link rel="stylesheet" href="./fonts/lato/Lato-Regular.woff">
+  <link rel="stylesheet" href="./fonts/lato/Lato-Regular.woff2">
+  <title>Cat energy</title>
+</head>
 
-  </body>
+<body class="page">
+  <header class="main-header">
+    <div class="container main-header__container">
+      <a href="index.html" class="main-header main-header__logo">
+        <img src="images/header/logo-mobile.svg" alt="логитип кот энгерджи" width="33" height="38">
+      </a>
+      <a href="index.html" class="main-header__text">
+        <img src="images/header/logo_text.svg" alt="cat energy текст">
+      </a>
+      <a href="#" class="main-header__logo_text"> <span class="visually-hiden">cat energy</span></a>
+      <nav class="main-nav">
+        <button class="main_nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        <div class="main-nav__wrapper">
+          <ul class="hidden-menu">
+            <li class="hidden-menu__item site-list__item--active site-list__item-general">
+              <a href="/">главная</a>
+            </li>
+            <li class="hidden-menu__item site-list__item
+           site-list__item-catalog">
+              <a href="/catalog.html">каталог продукции</a>
+            </li>
+            <li class="hidden-menu__item site-list__item site-list__item-program">
+              <a href="/form.html">подбор программы</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </header>
+  <main class="main-container">
+    <section class="main-photo">
+      <h1 class="main--text">функциональное питание для котов</h1>
+      <h2 class="main--discription">занялся собой? займись котом!</h2>
+      <img class="main-phoot__image" src="images/main/cat-head.jpg" alt="изображение банки кота энерджи" width="280"
+        height="270">
+      <div class="main-button">
+        <a href="#" class="main-button__catalog">Подобрать программу</a>
+      </div>
+    </section>
+    <section class="products">
+      <ul class="products__list">
+        <li class="weight--lost"> похудение
+          <p class="products_description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
+            Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+          <a href="№" class="products__link">Каталог slim</a>
+        </li>
+        <li class="weight--up">
+          <span class="icon"> </span> набор массы
+          <p class="products__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
+            поможет вашему коту нарастить необходимые мышцы!</p>
+          <a href="№" class="products__link products__arrow">Каталог pro</a>
+        </li>
+      </ul>
+    </section>
+    <section class="advantages section">
+      <div class="container">
+        <div class="advantages__inner">
+          <h2 class="advanatages__item">как это работает</h2>
+          <ul class="advantages__item">
+            <li class="advantages__list">
+              <div class="advantages__icon advantages__icon--leaf"></div>
+              <p>Функциональное питание содержит только поезные питательные вещества.</p>
+            </li>
+            <li class="advantages__list">
+              <div class="advantages__icon advantages__icon--liquid"></div>
+              <p>Выпускается в виде порошка,который нужно лишь залить кипятком и готово.</p>
+            </li>
+            <li class="advantages__list">
+              <div class="advantages__icon advantages__icon--cutlery"></div>
+              <p>Замените один-два приема обычной еды на наше функциональное питание.</p>
+            </li>
+            <li class="advantages__list">
+              <div class="advantages__icon advantages__icon--clock"></div>
+              <p>Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+            </li>
+          </ul>
+          <div>
+          </div>
+    </section>
+    <section class="example">
+      <h2 class="example__title">Живой пример</h2>
+      <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy
+        Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16
+        часов в день. </p>
+      <div class="example__result">
+        <div class="example__result-block">
+          <span class="example__result-numbers">5 кг</span>
+          <span class="example__result-text">снижение веса</span>
+        </div>
+        <div class="example__result-block">
+          <span class="example__result-numbers">60 дней</span>
+          <span class="example__result-text">затрачено времени</span>
+        </div>
+      </div>
+      <p class="cost">Затраты на питание: 15 000 руб.</p>
+      <div class="result__slider">
+        <img src="images/main/cat.jpg" alt="слайдер кота до" class="cat_before" width="140" height="256">
+        <img src="images/main/slide after.jpg" alt="слайд кота после" class="cat__after" width="140" height="256">
+      </div>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <div class="cooperation">
+      <p class="cooperation__dealer">приглашаем к сотрудничеству дилеров!</p>
+      <address class="cooperation__adres">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
+    </div>
+    <div class="map">
+      <img src="/images/footer/Rectangle.jpg" alt="место нахождение торговой точки" class="map-rectangle" width="320"
+        height="362">
+    </div>
+    <span class="footer_logo">cat energy</span>
+    <div class="social">
+      <ul class="social_link">
+        <li class="social__list visually-hidden">вконтакте</li>
+        <li class="social__list visually-hidden">ютуб</li>
+        <li class="social__list visually-hidden">телеграм</li>
+      </ul>
+      <div class="html-academy__link">
+        <a class="html-academy__link-item_1 visually-hidden">HTML Academy</a>
+        <a class="html-academy__link-icon visually-hidden">логотип HTML Academy</a>
+      </div>
+    </div>
+  </footer>
+</body>
+
 </html>
